# python-template

./: .pre-commit-config.yaml  LICENSE  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init.sh
.github/workflow/: ci.yml
